fix more layout problems, fix test cases

--- a/server/src/main/public/css/bridge.css
+++ b/server/src/main/public/css/bridge.css
@@ -658,8 +658,7 @@ body > div > div > div {
 .divAppBar + * {
   flex: 1 0;
   overflow: auto;
-  margin-top: 8px;
-  margin-left: 8px;
+  padding: 8px;
 }
 
 .muiToolbar {
